<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.watsonlogic.hellocalculator.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/testingApplicationTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/eightBtn"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/eightBtn"
        android:text="Testing Application" />

    <Button
        android:id="@+id/toastBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/testingApplicationTV"
        android:layout_alignStart="@+id/testingApplicationTV"
        android:layout_below="@+id/testingApplicationTV"
        android:text="toastBtn" />

    <Button
        android:id="@+id/oneBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="88dp"
        android:layout_toLeftOf="@+id/twoBtn"
        android:layout_toStartOf="@+id/twoBtn"
        android:text="1" />

    <Button
        android:id="@+id/twoBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fourBtn"
        android:layout_toLeftOf="@+id/threeBtn"
        android:layout_toStartOf="@+id/threeBtn"
        android:text="2" />

    <Button
        android:id="@+id/threeBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fiveBtn"
        android:layout_centerHorizontal="true"
        android:text="3" />

    <Button
        android:id="@+id/fourBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/oneBtn"
        android:layout_alignLeft="@+id/oneBtn"
        android:layout_alignStart="@+id/oneBtn"
        android:text="4" />

    <Button
        android:id="@+id/fiveBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/twoBtn"
        android:layout_alignLeft="@+id/twoBtn"
        android:layout_alignStart="@+id/twoBtn"
        android:text="5" />

    <Button
        android:id="@+id/sixBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/threeBtn"
        android:layout_alignLeft="@+id/threeBtn"
        android:layout_alignStart="@+id/threeBtn"
        android:text="6" />

    <Button
        android:id="@+id/sevenBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fourBtn"
        android:layout_alignStart="@+id/fourBtn"
        android:layout_alignTop="@+id/eightBtn"
        android:text="7" />

    <Button
        android:id="@+id/eightBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fiveBtn"
        android:layout_alignLeft="@+id/fiveBtn"
        android:layout_alignStart="@+id/fiveBtn"
        android:text="8" />

    <Button
        android:id="@+id/nineBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sixBtn"
        android:layout_alignLeft="@+id/sixBtn"
        android:layout_alignStart="@+id/sixBtn"
        android:text="9" />

    <Button
        android:id="@+id/plusBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/equalsBtn"
        android:layout_alignTop="@+id/nineBtn"
        android:layout_toEndOf="@+id/sixBtn"
        android:layout_toRightOf="@+id/sixBtn"
        android:text="+" />

    <Button
        android:id="@+id/equalsBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/plusBtn"
        android:layout_alignRight="@+id/plusBtn"
        android:layout_below="@+id/threeBtn"
        android:layout_toEndOf="@+id/twoBtn"
        android:layout_toRightOf="@+id/twoBtn"
        android:text="=" />

    <TextView
        android:id="@+id/answerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sevenBtn"
        android:layout_alignEnd="@+id/plusBtn"
        android:layout_alignLeft="@+id/sevenBtn"
        android:layout_alignRight="@+id/plusBtn"
        android:layout_alignStart="@+id/sevenBtn"
        android:background="#006699"
        android:gravity="right"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fff" />

    <Button
        android:id="@+id/zeroBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/oneBtn"
        android:layout_alignStart="@+id/oneBtn"
        android:layout_below="@+id/twoBtn"
        android:layout_toLeftOf="@+id/threeBtn"
        android:layout_toStartOf="@+id/threeBtn"
        android:text="0" />

</RelativeLayout>
